# openclaw-memory

./: .gitignore  LICENSE  NOTICE  README.md  README_CN.md  pyproject.toml
.cursor/rules/: memory.mdc
docs/: architecture.md  configuration.md  cursor-usage-guide.md  embedding.md  index.md  privacy.md  retrieval-pipeline.md  session-management.md  storage.md  write-pipeline.md
examples/sample-memory/: .openclaw_memory.toml
examples/sample-memory/agent/: decisions.md  patterns.md
examples/sample-memory/journal/: 2026-02-12.md
examples/sample-memory/user/: entities.md  instructions.md  preferences.md
src/openclaw_memory/: __init__.py  __main__.py  chunker.py  config.py  cursor_context.py  indexer.py  primer.py  privacy.py  retriever.py  server.py  storage.py  store.py  watcher.py  web.py  writer.py
src/openclaw_memory/embeddings/: __init__.py  local.py  ollama.py  openai.py
tests/: test_chunker.py  test_primer.py  test_privacy.py  test_retriever.py  test_storage.py  test_writer.py
