[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claw-memory"
version = "1.2.0"
description = "Record and search your AI chat history. Markdown files, zero dependencies beyond MCP."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "OpenClaw Contributors" }]
keywords = ["mcp", "memory", "agent", "chat-history", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
claw-memory = "openclaw_memory.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
